fixing css on blogs home
fixing overlap issue

--- a/src/components/blogs/blogs-home.css
+++ b/src/components/blogs/blogs-home.css
@@ -66,12 +66,14 @@
       flex-direction: column; 
       align-items: center;
       margin: 30px 0 20px 0;
-    }
+    } 
     .main-map {
         flex-direction: column; 
         align-items: center;
         margin: 40px 0 30px 0;
     }
-    
-    }
+    .blogs-page {
+        height: 120vh;
+    } 
 
+}
